ocaml/test/errors/e001_lex_error.camdl
# E001: lex error — unterminated string literal
compartments { S, I, R }
parameters { beta: rate }
transitions {
  infection : S --> I @ "unterminated
}
